# hackathon_backend

./: .env.example  .env.sample  .gitattributes  .gitignore  Dockerfile  Procfile  README.md  docker-compose.yml  package-lock.json  pyproject.toml  requirements.txt
.github/workflows/: deploy.yml
config/: __init__.py  celery.py  pagination.py  settings.py  urls.py
core/addressing/: __init__.py  admin.py  apps.py
core/addressing/application/: dto.py  service.py  services.py
core/addressing/domain/: __init__.py  entities.py  repository.py
core/addressing/infra/: models.py  repositories.py  repository.py
core/addressing/management/: __init__.py
core/addressing/migrations/: 0001_initial.py  0002_neighborhood_region_delete_area_and_more.py  0003_remove_address_addressing__region__6f3866_idx_and_more.py  0004_neighborhood_geometry.py  0005_neighborhood_area_km2_neighborhood_bbox_max_lat_and_more.py  0006_remove_neighborhood_uniq_neigh_city_name_and_more.py  0007_remove_region_addressing__bbox_mi_cb5566_idx_and_more.py  0008_neighborhood_area_km2.py  (+5 more)
core/common/: __init__.py  cache.py  mixins.py
core/flood_camera_monitoring/: __init__.py  admin.py  apps.py  tasks.py
core/flood_point_registering/: admin.py  apps.py  urls.py
core/forecast/: admin.py  apps.py
core/migrations/: 0001_initial.py  0002_camera_flooddetectionrecord.py  0002_occurrence_weather_forecast.py  0003_flooddetectionrecord_image.py  0003_weather_river_disrcharge_weather_temperature.py  0004_remove_flooddetectionrecord_camera_delete_camera_and_more.py  0004_rename_river_disrcharge_weather_river_discharge.py  0005_camera_flooddetectionrecord.py  0005_delete_occurrence_delete_weather.py  0006_delete_forecast.py  0006_remove_flooddetectionrecord_camera_delete_camera_and_more.py  0007_merge_20250908_1746.py  0008_delete_user.py
core/occurrences/: admin.py  apps.py
core/users/: admin.py  apps.py  models.py
core/weather/: admin.py  apps.py
docker/: .dockerignore  Dockerfile  Dockerfile.slim  docker-compose.override.yml  docker-compose.yml  requirements.runtime.txt
(+135 files in other folders)
