[project]
name = "hackathon_backend"
version = "0.1.0"
description = "Default template for PDM package"
authors = [
    {name = "nicolefemello", email = "nicfmello@gmail.com"},
]
dependencies = [
    "django>=5.2.3",
    "djangorestframework>=3.16.0",
    "djangorestframework-simplejwt>=5.3.1",
    "redis>=6.4.0",
    "celery>=5.5.3",
    "django-celery-beat>=2.7.0",
    "dotenv>=0.9.9",
    "torch>=2.8.0",
    "torchvision>=0.23.0",
    "requests>=2.31.0",
    "opencv-python-headless>=4.8.0.76",
    "pillow>=10.0.0",
    "tqdm>=4.64.0",
    "matplotlib>=3.5.0",
    "seaborn>=0.11.0",
    "scikit-learn>=1.1.0",
    "imbalanced-learn>=0.12.0",
    "pandas>=2.0.0",
    "geopandas>=0.14.0",
    "shapely>=2.0.0",
    "fiona>=1.9.0",
    "pyproj>=3.5.0",
    "rtree>=1.0.0",
    "nvidia-cublas-cu12>=12.8.4.1",
    "opencv-python>=4.12.0.88",
    "mercadopago>=2.3.0",
]
requires-python = "==3.13.*"
readme = "README.md"
license = {text = "MIT"}


[tool.pdm]
distribution = false

[tool.pdm.scripts]
dev = "python manage.py runserver"
migrate = "python manage.py migrate"
makemigrations = "python manage.py makemigrations"
createsuperuser = "python manage.py createsuperuser"
celery = "celery -A config worker --loglevel=INFO --concurrency=10 -n worker1.%h --pool=solo"
beat = "celery -A config beat --loglevel=INFO"
shell = "python manage.py shell"